# wave_function_collapse_sudoku

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  main.py  pyproject.toml
.benchmarks/Darwin-CPython-3.10-64bit/: 0001_dfa3fc94a2aab43257038cdc4b233b91266de1a8_20220614_200529_uncommited-changes.json  0002_dfa3fc94a2aab43257038cdc4b233b91266de1a8_20220614_200712_uncommited-changes.json  0003_dfa3fc94a2aab43257038cdc4b233b91266de1a8_20220615_111311_uncommited-changes.json  0004_dfa3fc94a2aab43257038cdc4b233b91266de1a8_20220615_111359_uncommited-changes.json  0005_dfa3fc94a2aab43257038cdc4b233b91266de1a8_20220615_111755_uncommited-changes.json  0006_dfa3fc94a2aab43257038cdc4b233b91266de1a8_20220615_112445_uncommited-changes.json  0007_dfa3fc94a2aab43257038cdc4b233b91266de1a8_20220615_112551_uncommited-changes.json  0008_dfa3fc94a2aab43257038cdc4b233b91266de1a8_20220615_112709_uncommited-changes.json  0009_dfa3fc94a2aab43257038cdc4b233b91266de1a8_20220615_112857_uncommited-changes.json  0017_run_before_weighting.json  0018_skip_box_neighbours.json  (+21 more)
logic/: Exceptions.py  Grid.py  coords.py  create_grid.py  exceptions.py  free_boxes.py  get_constraints.py  get_groups.py  get_neighbours.py  types.py  wave_function.py  weights.py
logic2/: create_grid.py  get_groups.py
requirements/: base.txt  test.txt
ui/: add_components.py  align.py  app.py  coef_matrix_to_string.py  grid_to_string.py  print_coef_matrix.py  print_grid.py  print_matrix.py  types.py  visualiser.py
util/: coords_converters.py  is_collapsed.py
(+14 files in other folders)
