[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = "Command-line sudoku app, implementing the wave function collapse algorithm."
authors = ["Luke Scanlan <luke@lukescanlan.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8-quotes = "^3.3.1"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
pycodestyle = "^2.8.0"
pytest-benchmark = "^3.4.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
